1.1
- added a "Current preset" mechanic to solve the problem with losing all files added before creating and selecting a preset
- files with extension ".deh" are now loaded via command line option "-deh" instead of "-file"
- you can now manually type map name into the "Launch selected map" combo box
- window with map packs now shows paths relative to map directory as a temporary substitute for future tree view

1.0
- completed Compatibility Options dialog
- fixed bug where checkboxes in compatibility options didn't update correctly when number was entered manually
- fixed bug where checking some checkboxes in gameplay options would result in invalid flags
- IWAD list and Map pack list can now show files in subdirectories
- added new supported filename extensions for IWADs/Maps/Mods
- dialog for selecting engine to add now shows only .exe files on Windows

0.9-beta
- implemented drag&drop reordering for the preset list
- reworked the drag&drop reordering and file dropping in the mod list
- fixed restoring of additional command line arguments
- fixed restoring of the "use absolute path" option
- engine name is now derived from directory name instead of executable name
- added "clone preset" button
- added an option to select a configuration file
- added file filters for file dialogs
- few minor bug fixes