@@ -3,6 +3,7 @@
 - files with extension ".deh" are now loaded via command line option "-deh" instead of "-file"
 - you can now manually type map name into the "Launch selected map" combo box
 - window with map packs now shows paths relative to map directory as a temporary substitute for future tree view
+- fixed a bug where you couldn't delete or move multiple mod files at once
 
 1.0
 - completed Compatibility Options dialog
